packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_sync_endpoint_invalid_mode_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "INVALID_MODE",
  "message": "unsupported repo sync mode `bogus`"
}
