packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/search_autocomplete_payload.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 9
expression: value
---
{
  "prefix": "se",
  "suggestions": [
    {
      "suggestionType": "heading",
      "text": "Search Design"
    },
    {
      "suggestionType": "heading",
      "text": "Search Notes"
    }
  ]
}
